PR #89 TemplateProcessingTracer reworked: - Instead of passing several arguments to the TemplateProcessingTracer method, only pass a single TracedElement object. This allow use to add new methods later without breaking backward compatibility. - Added TracedElement.getDescription() to give a single-line canonical description of the element (same format that we use in FTL stack taces) - Expose the Environment object to TemplateProcessingTracer methods - Do not expose the TracedElement to exitElement, because we can't always ensure that it's available because of some internal tricks - Added special branch to iterator directives and if-elseif-else, as because of the element stack tricks they apply normally, some elements were hidden from the tracer - Some minor renaming. - Added getter to Environment. - Extended test coverage, and fixed quotation logic in the test (it was broken for example for ?interpret-ed snippets) - Added more documentation